rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  namespace: lab7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest          
  template:
    metadata:
      labels:
        app: rest     
    spec:
      containers:
      - name: rest
        image: us-central1-docker.pkg.dev/lab7-477021/lab7/rest:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
        
        # Resource requests
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "2"
            memory: "2Gi"
