rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
  namespace: lab7
spec:
  selector:
    app: rest
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
